[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/zylann.hterrain/hterrain_texture_set.gd" type="Script" id=1]
[ext_resource path="res://src/Camera.gd" type="Script" id=3]
[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=5]
[ext_resource path="res://src/Debug.gd" type="Script" id=7]
[ext_resource path="res://src/CommandLine.gd" type="Script" id=8]
[ext_resource path="res://src/utils/RayCast.tscn" type="PackedScene" id=11]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
fog_color = Color( 0.733333, 0.882353, 1, 1 )
fog_depth_begin = 50.0
fog_depth_end = 120.0
glow_bloom = 0.03
glow_blend_mode = 1

[sub_resource type="Resource" id=3]
script = ExtResource( 1 )
mode = 0
textures = [ [  ], [  ] ]

[node name="AbstractLevel" type="Spatial"]

[node name="Camera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 13 )
script = ExtResource( 3 )

[node name="Camera3D" type="Camera" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
current = true

[node name="RayCast" parent="Camera" instance=ExtResource( 11 )]
enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, -0.612373, 0.612373, 0, 0.707107, 0.707107, -0.866025, -0.353553, 0.353553, 0, 11, 0 )
shadow_enabled = true

[node name="Debug" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandLine" type="TextEdit" parent="Debug"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.0
show_line_numbers = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Debug"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerformancePanel" type="VBoxContainer" parent="Debug/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 161.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Debug/PanelContainer/PerformancePanel"]
margin_right = 154.0
margin_bottom = 14.0
text = "FPS: 0"

[node name="DrawCalls" type="Label" parent="Debug/PanelContainer/PerformancePanel"]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 32.0
text = "DrawCalls: 0"

[node name="TimeProcess" type="Label" parent="Debug/PanelContainer/PerformancePanel"]
margin_top = 36.0
margin_right = 154.0
margin_bottom = 50.0
text = "Time Process: 0"

[node name="TimePhysicsProcess" type="Label" parent="Debug/PanelContainer/PerformancePanel"]
margin_top = 54.0
margin_right = 154.0
margin_bottom = 68.0
text = "Time Physics Process: 0"

[node name="MaterialChanges" type="Label" parent="Debug/PanelContainer/PerformancePanel"]
margin_top = 72.0
margin_right = 154.0
margin_bottom = 86.0
text = "MaterialChanges: 0"

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]

[node name="HTerrain" type="Spatial" parent="Navigation/NavigationMeshInstance"]
script = ExtResource( 5 )
ambient_wind = 0.0
lod_scale = 2.0
map_scale = Vector3( 1, 1, 1 )
_terrain_data = null
chunk_size = 32
collision_enabled = true
collision_layer = 17
collision_mask = 0
shader_type = "LowPoly"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource( 3 )
